fix responsive bug on mobile

--- a/src/scss/abstracts/_breakpoints.scss
+++ b/src/scss/abstracts/_breakpoints.scss
@@ -6,10 +6,10 @@ $breakpoints: (
   // Height-based media queries
   small: 600px,
   medium: 768px,
-  large: 1024px,
+  large: 900px,
 );
 
 $media-expressions: (
   'landscape': '(orientation: landscape)',
-  'aspect-ratio-3/2': '(min-aspect-ratio: 3 / 2)'
+  'aspect-ratio-9/20': '(min-aspect-ratio: 9/20)'
 )
